[package]
name = "polymerust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio-seq = "0.11.2"
constcat = "0.4.0"
ndarray = "0.15.6"
rand = "0.8.5"
regex = "1.10.2"
seq_io = "0.3.2"

[[bin]]
name = "polymerust-cli"
path = "src/main.rs"
